--- a/clipstitch/index.html
+++ b/clipstitch/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ClipStitch - Video Merger</title>
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Font: Prompt -->
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <!-- บรรทัดนี้คือส่วนที่เชื่อมโยงกับ manifest.json ครับ -->
+    <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
     <style>
       body {
