--- a/clipstitch/index.html
+++ b/clipstitch/index.html
@@ -6,7 +6,7 @@
     <title>ClipStitch - Video Merger</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Font: Prompt -->
+    <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
